@@ -55,17 +55,11 @@ public class SecurityConfig {
         http.csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(authz -> authz
-                        // the only allowed endpoints without authentication ( can be accessed without a
-                        // token)
-                        .requestMatchers("/api/login", "/api/register").permitAll()
-                        .requestMatchers("/api/stations/stream", "/api/stations/subscribe").permitAll()
-                        // all other endpoints require authentication
-                        .anyRequest().authenticated())
-                // If any exception occurs, this will handle it by redirecting to 401
+                        // Allow all endpoints without authentication
+                        .anyRequest().permitAll())
                 .exceptionHandling(ex -> ex.authenticationEntryPoint(jwtAuthenticationEntryPoint))
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
-        // Add a filter to validate the tokens with every request. It forces tgat tge
-        // filter is executed before the UsernamePasswordAuthenticationFilter
+
         http.addFilterBefore(jwtRequestFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -81,8 +75,9 @@ public class SecurityConfig {
     // request, the backend will still accept it thanks to this configuration
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        // Allow all origins
+        configuration.setAllowedOriginPatterns(List.of("*"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
 
